<resources>
    <string name="app_name">AHBeginnerGuide</string>
    <string name="welcomeText">Welcome to the Abington Heights High School Beginner Guide! \nWe are AH!</string>
    <string name="generalInfo">200 East Grove St \nClarks Summit, PA 18411 \n 570-586-2511</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eventTitleExample">Example Event Title</string>
    <string name="eventDateExample">Example Event Date</string>
    <string name="eventContactExample">Name : email</string>
    <string name="example_faculty_name">Example Faculty Name</string>
    <string name="example_faculty_contact">Example Faculty Contact</string>
    <string name="resources">Resources</string>
    <string name="example_answer">example answer</string>
    <string name="example_question">example question</string>
    <string name="firstLink">www.ahsd.org</string>
    <string name="secondLink">classroom.google.com/h</string>

</resources>
