<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/eventTitleExample"
        android:textStyle="bold"
        android:textColor="#3a6fb0"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/textViewEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/textViewEventTitle"
        android:text="@string/eventDateExample"
        android:fontFamily="serif"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/textViewEventContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/textViewEventDate"
        android:text="@string/eventContactExample"
        android:fontFamily="serif"
        android:textSize="15sp"/>

</RelativeLayout>