<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo"

            />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/welcomeText"
            android:fontFamily="serif"
            android:textSize="26sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resources: "
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/ahwebtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:clickable="true"
            android:text="@string/firstLink"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:fontFamily="serif"
            android:textSize="19sp"
            />
        <TextView
            android:id="@+id/googleclasstitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:clickable="true"
            android:text="@string/secondLink"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="serif"
            android:textSize="19sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generalInfo"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="serif"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="570-807-0038"
            android:gravity="center"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>

</ScrollView>